[package]
name = "hello"
version = "0.1.0"
authors = ["yiranlandtour <yiranlandtour@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
image = "0.23.14"
num = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
bit-set = "0.5.2"
itertools = "0.10"
permutohedron = "0.2.4"
rug = "1.11.0"
